Switch to WinFormsHost management and update NuGets.

--- a/src/CommunityToolkit.WinForms.ConversationView/Components/ConversationRenderer.razor
+++ b/src/CommunityToolkit.WinForms.ConversationView/Components/ConversationRenderer.razor
@@ -1,5 +1,5 @@
 ﻿@page "/markdown-renderer"
-@using ConversationView.Components
+@using CommunityToolkit.WinForms.ConversationView.Components
 
 <div class="canvas" style="background-color: @(BackColor);">
     <div class="fullScreen-box" style="background-color: @(this.ViewModel.BackColor); color: @(this.ViewModel.ForeColor);">
